# htrpc

./: Cargo.toml  README.md
examples/: counter_rpc.rs  hello.rs
src/: client.rs  error.rs  json.rs  json_pretty.rs  lib.rs  misc.rs  msgpack.rs  path_template.rs  path_template_ser.rs  pool.rs  procedure.rs  rfc7807.rs  router.rs  server.rs  types.rs
src/deserializers/: http_body.rs  http_header.rs  mod.rs  request.rs  response.rs  rpc_request.rs  rpc_response.rs  url_path.rs  url_query.rs
src/serializers/: http_body.rs  http_header.rs  mod.rs  request.rs  response.rs  rpc_request.rs  rpc_response.rs  unusable.rs  url_path.rs  url_query.rs
