[package]
name = "htrpc"
version = "0.1.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]

[dependencies]
fibers = "0.1"
futures = "0.1"
handy_async = "0.2"
miasht = "0.0"
serde = "1"
serdeconv = "0.2"
slog = "2"
trackable = "0.1"
url = "1"

[dev-dependencies]
clap = "2"
serde_derive = "1"
sloggers = "0.1"