[package]
name = "htrpc"
version = "0.0.3"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "HTTP based RPC library"
documentation = "https://docs.rs/htrpc"
homepage = "https://github.com/sile/htrpc"
repository = "https://github.com/sile/htrpc"
readme = "README.md"
categories = ["web-programming::http-server", "network-programming"]
license = "MIT"

[badges]
travis-ci = {repository = "sile/htrpc"}

[dependencies]
fibers = "0.1"
futures = "0.1"
handy_async = "0.2"
miasht = "0.0"
serde = "1"
serde_derive = "1"
serdeconv = "0.2"
slog = "2"
trackable = "0.1"
url = "1"
url_serde = "0.2"

[dev-dependencies]
clap = "2"
sloggers = "0.1"
